--- a/EFExemplo/EFExemplo/appsettings.json
+++ b/EFExemplo/EFExemplo/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnection": "Data Source=AI11-1264701\\SQLSENAI;Initial Catalog=dbExemploEF;Integrated Security=True;TrustServerCertificate=True;"
+  }
 }
